Fix header menu on mobile

--- a/_sass/components/layout/_header.scss
+++ b/_sass/components/layout/_header.scss
@@ -30,7 +30,12 @@
     .wrapper {
         position: relative;
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
+
+        @include bp-medium {
+            flex-direction: row;
+        }
     }
 
     .menu-button,
